[package]
name = "larkspur-ebpf-on-cpu"
version = "0.1.0"
edition.workspace = true

[dependencies]
larkspur-common = { path = "../larkspur-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "larkspur-on-cpu"
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"