[package]
name = "larkspur"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
larkspur-common = { path = "../larkspur-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
clap = { version = "4.5.41", features = ["derive"] }
bytemuck = "1.23.1"
proc-maps = "0.4.0"
goblin = "0.10.0"
hex = "0.4.3"
crossbeam-channel = "0.5"
blazesym="0.2.0-alpha.12"
inferno = "0.12.3"
[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependecy so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
larkspur-ebpf = { path = "../larkspur-ebpf" }

[[bin]]
name = "larkspur"
path = "src/main.rs"
